amigalog.txt
make
gcc -O2 -Wall -I./src -ISDK:Include/include_h -c src/main.c -o src/main.o
src/main.c: In function 'DevClose':
src/main.c:357:27: error: invalid use of undefined type 'struct DosIFace'
  357 |             if (IDos) IDos->Delay(2);
      |                           ^~
At top level:
src/main.c:95:29: warning: 'device_manager_tags' defined but not used [-Wunused-const-variable=]
   95 | STATIC CONST struct TagItem device_manager_tags[] = {
      |                             ^~~~~~~~~~~~~~~~~~~
make: *** [src/main.o] Error 1
6.RAM Disk:> 

